feat: improved the client flow for credit
